@@ -1,5 +1,3 @@
-*** FIX THE FPS ***
-
 Add clicking animations in buttons
 Implement lazy loading of menus in menu-mgr
 
