@@ -4,6 +4,7 @@
 #include "event-listener.h"
 #include "menu.h"
 #include <SDL2/SDL_render.h>
+#include <stdbool.h>
 
 typedef struct {
     mn_Menu *currentMenu;
@@ -24,7 +25,7 @@ typedef struct {
 } mmgr_MenuManagerConfig;
 
 mmgr_MenuManager *mmgr_initMenuManager(mmgr_MenuManagerConfig* cfg, SDL_Renderer* renderer, kb_Keyboard *keyboard, ms_Mouse *mouse);
-void mmgr_updateMenuManager(mmgr_MenuManager *mmgr, kb_Keyboard *keyboard, ms_Mouse *mouse);
+void mmgr_updateMenuManager(mmgr_MenuManager *mmgr, kb_Keyboard *keyboard, ms_Mouse *mouse, bool paused);
 void mmgr_drawMenuManager(mmgr_MenuManager *mmgr, SDL_Renderer *r, bool displayButtonHitboxes);
 void mmgr_destroyMenuManager(mmgr_MenuManager *mmgr);
 void mmgr_switchMenu(mmgr_MenuManager *mmgr, mn_ID switchTo);
